# i3status-rust

./: .gitignore  Cargo.toml  config.toml  mouse.sh  run.sh
src/: errors.rs  icons.rs  main.rs  util.rs  widget.rs
src/blocks/: backlight.rs  battery.rs  bluetooth.rs  cpu.rs  custom.rs  disk_space.rs  docker.rs  focused_window.rs  ibus.rs  keyboard_layout.rs  load.rs  maildir.rs  memory.rs  mod.rs  music.rs  net.rs  networkmanager.rs  nvidia_gpu.rs  pacman.rs  sound.rs  speedtest.rs  temperature.rs  template.rs  time.rs  toggle.rs  uptime.rs  weather.rs  xrandr.rs
src/widgets/: button.rs  graph.rs  rotatingtext.rs  text.rs
