[package]
name = "i3status-rs"
description = "A feature-rich and resource-friendly replacement for i3status, written in Rust."
repository = "https://github.com/greshake/i3status-rust/"
readme = "README.md"
license = "GPLv3"
version = "0.10.0"
authors = ["Kai Greshake <development@kai-greshake.de>",
           "Contributors on GitHub (https://github.com/greshake/i3status-rust/graphs/contributors)"]
edition = "2018"

[features]
default = ["pulseaudio"]
pulseaudio = ["libpulse-binding"]
# Opt-in block profiling, intended for developers.
profiling = ["cpuprofiler", "progress"]

[dependencies]
chrono = "0.4"
chrono-tz = "0.5"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
clap = "2.33"
uuid = { version = "0.7", features = ["v4"] }
dbus = "0.7"
nix = "0.15"
i3ipc = "0.10"
num = "0.2"
crossbeam-channel = "0.3"
inotify = "0.7"
maildir = "0.1"
libpulse-binding = { optional = true, version = "2.11", default-features = false }
# Used only in debug build mode
# for profiling blocks
cpuprofiler = { version = "0.0.3", optional = true }
progress = { version = "0.2", optional = true }

config = "0.9"
notify = "^5.0.0-pre.1"
#notify = "4.0"

[dependencies.regex]
version = "1.3"
default-features = false
features = ["std"]
